@@ -4,7 +4,9 @@ Changes in 0.62.16:
   * The --info output for "conary erase" and "conary update" has been
     reworked to be more user friendly.
   * Added new conaryrc option signatureKeyMap to choose which signature
-    to use when signing based on the buildLabel.
+    to use when signing based on the buildLabel.  Later signatureKeyMap
+    entries override earlier ones, so (for example) ~/.conaryrc entries
+    will override entries in /etc/conaryrc.
   * Fixed a bug where conary would only sign the last trove listed,
     instead of signing all troves listed.
 
